force-app/main/default/objects/Application_Course_Preference__c.object
<CustomObject>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <description>18 Digit Salesforce ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 Digit Salesforce ID</inlineHelpText>
        <label>18 Digit ID - Application Course Pref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_to_be_printed__c</fullName>
        <label>Certificate to be printed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completion with credit points</fullName>
                </value>
                <value>
                    <fullName>Completion without credit points</fullName>
                </value>
                <value>
                    <fullName>Attendance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Completed_Without_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Completed Without Points ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_to_Fulltime_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GRT flag if intended to enrol full-time from part-time</description>
        <label>Change to Fulltime Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_to_Internal_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GRT flag when applicant want to change from external to internal campus</description>
        <label>Change to Internal Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citizenship_Classification__c</fullName>
        <description>Citizenship Classification based on Residency Status and Campus Location (Application fields)

Please refer to the table here:
https://confluence.apps.monash.edu/pages/viewpage.action?spaceKey=SF&amp;title=Citizenship+Classification+Multi+Campus</description>
        <formula>Application__r.Citizenship_Classification__c</formula>
        <inlineHelpText>a formula field that holds the Citizenship Classification based on Residency Status and Campus Location</inlineHelpText>
        <label>Citizenship Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Country__c</fullName>
        <formula>TEXT(Application__r.Citizenship_Country__r.Country__c)</formula>
        <label>Citizenship Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Period__c</fullName>
        <label>Commencement Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Certificate_Mailed_Date__c</fullName>
        <label>Completion Certificate Mailed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conditional_Automation__c</fullName>
        <description>Picklist field to trigger GCO automation.</description>
        <inlineHelpText>Picklist field to trigger GCO automation.</inlineHelpText>
        <label>Conditional Automation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Generic Auto</fullName>
                    <isActive>false</isActive>
                    <label>Generic Auto</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Satisfied_Date__c</fullName>
        <description>Maps to adm_course_appl_instance.CNDTNL_OFFER_SATISFIED_DT</description>
        <label>Conditional Offer Satisfied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Status_LOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The overall status of the required documentation.</inlineHelpText>
        <label>Conditional Offer Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Conditional Offer Response</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Application Course Preferences (Conditional Offer Status)</relationshipLabel>
        <relationshipName>Conditional_Offer_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Status__c</fullName>
        <description>This field is used for an Admissions assessor to capture the conditional offer status of an Application Course Preference. Values in this field are not displayed on portals, and not used in integrations. The values in this field will flow to the Conditional_Offer_Status_LOV__c field when certain conditions are fulfilled. The Conditional_Offer_Status_LOV__c is used in integrations.</description>
        <label>Conditional Offer Status(Unused)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT-APPLIC</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>SATISFIED</fullName>
                </value>
                <value>
                    <fullName>WAIVED</fullName>
                </value>
                <value>
                    <fullName>UNSATISFAC</fullName>
                </value>
                <value>
                    <fullName>PEND-AO</fullName>
                </value>
                <value>
                    <fullName>PEND-ISP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conditions_Must_Be_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maps to adm_course_appl_instance.CNDTNL_OFFER_SATISFIED_DT</description>
        <label>Conditions Must Be Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>Application__r.Applicant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Category__c</fullName>
        <description>Maps to adm_course_appl_instance.CORRESPONDENCE_CAT</description>
        <label>Correspondence Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_APST_Standards__c</fullName>
        <formula>Course__r.APST_Standards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course APST Standards</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Admission_Status__c</fullName>
        <label>Course Admission Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Cond Offer</fullName>
                </value>
                <value>
                    <fullName>Cond Offer - Accepted</fullName>
                </value>
                <value>
                    <fullName>Cond Offer - Declined</fullName>
                </value>
                <value>
                    <fullName>Cond Offer - Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Full Offer</fullName>
                </value>
                <value>
                    <fullName>Full Offer - Accepted</fullName>
                </value>
                <value>
                    <fullName>Full Offer - Declined</fullName>
                </value>
                <value>
                    <fullName>Full Offer - Withdrawn</fullName>
                </value>
                <value>
                    <fullName>In Progress - Faculty</fullName>
                </value>
                <value>
                    <fullName>In Progress - IRS</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Monash Error</fullName>
                </value>
                <value>
                    <fullName>Packaged Cond Offer</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Application Lapsed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Attempt_Status__c</fullName>
        <formula>TEXT(Course_Attempt__r.Course_Attempt_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Attempt Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A system field that relates the course attempt to the ACP, based on course code. This will mirror the lookup from the SCA to the ACP.

Required for reporting SCA fields when driving the report from an ACP.</description>
        <inlineHelpText>The course attempt related to the ACP.</inlineHelpText>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Application Course Preferences</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code_Unique__c</fullName>
        <description>Course Code values stored as text . Used by apex to lookup the related course and populate its id in course lookup field</description>
        <label>Course Code Unique</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_End_Date_Updated__c</fullName>
        <formula>IF(NOT(ISBLANK(Revised_End_Date__c)),Revised_End_Date__c,Course_Offering__r.End_Date__c)</formula>
        <label>Course End Date (Updated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_End_Date__c</fullName>
        <description>This field used in PD for Conga MailMerge Report (for certificate cover letter)</description>
        <formula>Course_Offering__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Hours_of_Attendance__c</fullName>
        <description>Used for Conga report by PD</description>
        <formula>Course__r.Hours_of_Attendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Hours of Attendance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level__c</fullName>
        <formula>LOWER(TEXT(Course__r.Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>ACP</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Points__c</fullName>
        <description>Used in PD for Conga certificate printing</description>
        <formula>IF(
    ISPICKVAL(Certificate_to_be_printed__c,&quot;&quot;),
    &quot;&quot;,
    IF(
        Course_Offering__r.Course__r.Points__c = 0,
        &quot;0&quot;,
        IF(
            ISPICKVAL(Certificate_to_be_printed__c,&quot;Completion without credit points&quot;),
            &quot;0&quot;,
            IF(
                ISPICKVAL(Certificate_to_be_printed__c,&quot;Attendance&quot;),
                &quot;0&quot;,
                TEXT(Course_Offering__r.Course__r.Points__c)
            )        
        )
    )    
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Points_for_Independent_Study__c</fullName>
        <description>Used in PD for Conga certificate printing</description>
        <formula>IF(
ISPICKVAL(Certificate_to_be_printed__c,&quot;Attendance&quot;),
&quot;0&quot;,
TEXT(Course_Offering__r.Course__r.Points__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Points for Independent Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Product_Id__c</fullName>
        <formula>Course_Code__c + 
(
  IF(NOT(ISBLANK(Unit_Set_Code__c)),(&apos;_&apos; + Unit_Set_Code__c),&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Result__c</fullName>
        <label>Course Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Pass with credit points</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Start_Date_Updated__c</fullName>
        <formula>IF(NOT( ISNULL( Agreed_Start_Date__c)), Agreed_Start_Date__c, Course_Offering__r.Start_Date__c)</formula>
        <label>Course Start Date (Updated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Start_Year__c</fullName>
        <formula>YEAR(Course_Start_Date_Updated__c)</formula>
        <inlineHelpText>Retrieves year from calendar year field in Calendar object</inlineHelpText>
        <label>Course Start Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Term__c</fullName>
        <description>Course Term calculated from the Commencement Period, for use in Indo Offer Conga Template (BAHASA version).</description>
        <formula>TRIM(MID(Course_Offering__r.Admission_Calendar_Description__c, 5,(FIND(&quot;intake&quot;, LOWER(Course_Offering__r.Admission_Calendar_Description__c),7)-5)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type_Text__c</fullName>
        <description>Created for PD sharing and populated by a process builder. Course_Type__c is a formula field and can not use for sharing settings.</description>
        <label>Course Type Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>PRODEV - This field is used by Marketing Cloud.</description>
        <formula>TEXT( Course_Offering__r.Course__r.Type__c )</formula>
        <label>Course Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version_Number__c</fullName>
        <label>Course Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to course code, filtering out Unit Set courses</description>
        <label>Course</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Course__c.Type__c</field>
                <operation>notEqual</operation>
                <value>Unit Set</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>ACP Courses</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Adjusted_Course_Duration_Type__c</fullName>
        <formula>IF (NOT(ISBLANK(TEXT(Course_Offering__r.Override_Duration_Unit__c ) ) ), 
        TEXT(Course_Offering__r.Override_Duration_Unit__c),
        &apos;Year&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to capture the outcome of Credit/RPL Assessment</inlineHelpText>
        <label>Credit: Adjusted Course Duration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Adjusted_Course_Duration__c</fullName>
        <description>This field is used to record the course duration after taking into account the approved credit points. This field needs to be displayed/consumed along with the Adjusted_Course_Duration_Type__c picklist.</description>
        <inlineHelpText>What is the new course duration after the Credit/RPL assessment?</inlineHelpText>
        <label>Credit: Adjusted Course Duration</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment_Decision__c</fullName>
        <description>This field is used by assessors in faculty departments to record their decision against the assessment of an applicant&apos;s request for credit (Recognition of Prior Learning) during the Additional Requirements Assessment stage of the admissions process.</description>
        <inlineHelpText>Used to capture the outcome of Credit/RPL Assessment</inlineHelpText>
        <label>Credit: Credit Assessment Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Applicant Input Required</fullName>
                </value>
                <value>
                    <fullName>Internal Input Required</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Assessment_Flag__c</fullName>
        <description>Boolean flag to determine if ACP has RPL Points</description>
        <formula>AND(
OR( ISPICKVAL(Credit_Assessment_Decision__c, &quot;Approved&quot;), ISPICKVAL(Credit_Assessment_Decision__c, &quot;Granted&quot;) ),
 NOT( ISBLANK(Approved_Credit_Points__c)) ,
 NOT( ISBLANK(Credit_Adjusted_Course_Duration_Type__c)),
 NOT( ISBLANK(Credit_Adjusted_Course_Duration__c))
)</formula>
        <label>Credit Assessment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSS_Decision__c</fullName>
        <label>DSS Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSS_Outcome__c</fullName>
        <description>Translation of the Task: DSS Check to a display version to be used by the front end. Only if the Task: DSS Check field has a value of &apos;Complete&apos; or &apos;Failed&apos; will any information be displayed in this field.</description>
        <formula>IF(ISPICKVAL(Task_DSS_Check__c, &apos;Completed&apos;), &apos;Approved&apos;,
IF(ISPICKVAL(Task_DSS_Check__c, &apos;Failed&apos;), &apos;Rejected&apos;,
&apos; &apos;))</formula>
        <label>DSS Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_DSS_Review_Completed__c</fullName>
        <label>Date DSS Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Attended__c</fullName>
        <label>Days Attended</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferment_Status_LOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferment Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Offer Deferment</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Application Course Preferences (Deferment Status)</relationshipLabel>
        <relationshipName>Deferment_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deferment_Status__c</fullName>
        <description>This field is used for an Admissions assessor to capture the deferment status of an Application Course Preference. Values in this field are not displayed on portals, and not used in integrations. The values in this field will flow to the Deferment_Status_LOV__c field when certain conditions are fulfilled. The Deferment_Status_LOV__c is used in integrations.</description>
        <label>Deferment Status(Unused)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Offer_Response_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT-APPLIC</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>APPROVED-R</fullName>
                </value>
                <value>
                    <fullName>COND-PAID</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>WITHDRAWN</fullName>
                </value>
                <value>
                    <fullName>WITHDRN-CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferred_Academic_Alternate_Code__c</fullName>
        <label>Deferred Academic Alternate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Academic_CI_Sequence__c</fullName>
        <label>Deferred Academic CI Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Admission_Calendar_Type__c</fullName>
        <label>Deferred Admission Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Admission_Ci_Sequence__c</fullName>
        <description>Maps to adm_course_appl_instance.DEFERRED_ADM_CI_SEQUENCE_NUM</description>
        <label>Deferred Admission Ci Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Commencement_Period__c</fullName>
        <label>Deferred Commencement Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The deferred, or proposed, offering.</description>
        <label>Deferred Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>ACP (Deferred Course Offering)</relationshipLabel>
        <relationshipName>Application_Course_Preferences_Deferred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Difference_of_Previous_Application__c</fullName>
        <description>HDR difference of previous application</description>
        <label>Difference of Previous Application</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Evidence_ID__c</fullName>
        <description>Used by PD users for reporting.</description>
        <formula>Application__r.Enquiry_Number__r.Discount_Evidence_ID__c</formula>
        <label>Discount Evidence ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Status_LOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documentation Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>List_of_Values__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>List_of_Values__c.Type__c</field>
                <operation>equals</operation>
                <value>Documentation</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Application Course Preferences (Documentation Status)</relationshipLabel>
        <relationshipName>Documentation_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documentation_Status__c</fullName>
        <description>This field is used for an Admissions assessor to capture the documentation status of an Application Course Preference. Values in this field are not displayed on portals, and not used in integrations. The values in this field will flow to the Documentation_Status_LOV__c field when certain conditions are fulfilled. the Documentation_Status_LOV__c is used in integrations.</description>
        <label>Documentation Status(Unused)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SATISFIED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>INCOMPLETE</fullName>
                </value>
                <value>
                    <fullName>NOT-REQ</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>DOC-ENROL</fullName>
                </value>
                <value>
                    <fullName>DOC-PEND</fullName>
                </value>
                <value>
                    <fullName>DOC-UNCERT</fullName>
                </value>
                <value>
                    <fullName>PACK-DOC</fullName>
                </value>
                <value>
                    <fullName>PACK-DOC-U</fullName>
                </value>
                <value>
                    <fullName>NOT-APPLIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Applicant__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embargoed_Reason__c</fullName>
        <description>Formula that determines some kind of embargoed status</description>
        <formula>If (CONTAINS(Admission_Category__c, &apos;VTAC&apos;),
CASE (Admission_Category__c,&apos;VTAC-IS&apos;,&apos;VTAC INT&apos;,&apos;VTAC-MC-IS&apos;,&apos;VTAC INT&apos;,&apos;VTAC&apos;),If(CONTAINS(Admission_Category__c, &apos;HDR&apos;), &apos;GradResearch&apos;, &apos;&apos;))</formula>
        <inlineHelpText>ACP matches an embargoed rule</inlineHelpText>
        <label>Embargoed Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_and_Position__c</fullName>
        <description>HDR research program employer and position</description>
        <label>Employer and Position</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Days__c</fullName>
        <description>HDR research program employment days</description>
        <label>Employment Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_During_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR research program employment during research</description>
        <label>Employment During Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Hours__c</fullName>
        <description>HDR research program employment hours</description>
        <label>Employment Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employment_Load__c</fullName>
        <description>HDR research program employment load</description>
        <label>Employment Load</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                </value>
                <value>
                    <fullName>Part-Time/Casual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Assessment_Outcome__c</fullName>
        <label>English Assessment Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Not Assessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>